--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,11 @@
 {
+    // See http://go.microsoft.com/fwlink/?LinkId=827846
+    // for the documentation about the extensions.json format
     "recommendations": [
-        "vsciot-vscode.vscode-arduino",
-        "ronaldosena.arduino-snippets"
+        "platformio.platformio-ide"
     ],
     "unwantedRecommendations": [
-      "ms-vscode.cmake-tools"
+        "ms-vscode.cpptools-extension-pack",
+        "vsciot-vscode.vscode-arduino"
     ]
 }
