--- a/platformio.ini
+++ b/platformio.ini
@@ -45,6 +45,7 @@ build_flags =
 	-Wno-deprecated-declarations
 	-Wno-write-strings
 	-Os
+extra_scripts = pre:build_flags_cpp_only.py
 lib_deps =
 	${env.lib_deps}
 platform_packages =
