Run a script to add some flags to CPP.

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,3 +68,4 @@ build_flags =
   -DDEBUG_RP2040_SPI
   -DDEBUG_RP2040_CORE
 	-DDEBUG_RP2040_PORT=Serial
+extra_scripts = pre:build_flags_cpp_only.py
