A lot of moving stuff around.
Also, most methods now have no args. I want to use FreeRTOS or
maybe TaskScheduler to run things that run periodically, like
the BLE scanner for example that only runs for 10 seconds before
pausing for 10 seconds or the OLED update that isn't necessary
to do more often than maybe once per second or even less frequent.

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,19 +21,16 @@ lib_deps =
 	buelowp/sunset @ ^1.1.7
 	arkhipenko/TaskScheduler @ ^3.7.0
 	bblanchon/ArduinoJson @ ^6.21.2
-lib_ldf_mode = chain+
-
-[env:pico]
-platform = raspberrypi
-board = pico
-lib_deps =
-	${env.lib_deps}
+lib_ldf_mode = chain
 
 [env:picow]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipicow
 board_build.core = earlephilhower
 board_build.filesystem_size = 256k
+debug_tool = cmsis-dap
+upload_port = COM6
+monitor_port = COM6
 build_flags =
 	-DARDUINO_RASPBERRY_PI_PICO_W
 	-DPIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
@@ -44,6 +41,11 @@ build_flags =
 	-DARDUINOJSON_USE_LONG_LONG=1
 	-Wno-deprecated-declarations
 	-Wno-write-strings
+debug_build_flags =
+	-DDEBUG_RP2040_WIRE
+	-DDEBUG_RP2040_SPI
+	-DDEBUG_RP2040_CORE
+	-DDEBUG_RP2040_PORT=Serial
 extra_scripts = pre:build_flags_cpp_only.py
 lib_deps =
 	${env.lib_deps}
@@ -57,14 +59,18 @@ board_build.core = ${env:picow.board_build.core}
 board_build.filesystem_size = ${env:picow.board_build.filesystem_size}
 build_type = debug
 debug_tool = cmsis-dap
+debug_init_break = tbreak loop
+upload_protocol = cmsis-dap
+monitor_port = COM3
 lib_deps =
 	${env.lib_deps}
 platform_packages =
 	${env:picow.platform_packages}
-build_flags =
-	${env:picow.build_flags}
+debug_build_flags =
 	-DDEBUG_RP2040_WIRE
 	-DDEBUG_RP2040_SPI
 	-DDEBUG_RP2040_CORE
-	-DDEBUG_RP2040_PORT=Serial
+	-DDEBUG_RP2040_PORT=Serial1
+build_flags =
+	${env:picow.build_flags}
 extra_scripts = pre:build_flags_cpp_only.py
